--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "serverless-http": "^3.2.0"
   },
   "scripts": {
     "start": "nodemon server.js"
