--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "api/send-email.js", "use": "@vercel/node" },
-      { "src": "vite.config.js", "use": "@vercel/static-build" }
-    ],
-    "routes": [
-      { "src": "/send-email", "dest": "/api/send-email.js" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    },
+    {
+      "src": "api/send-email.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/send-email",
+      "dest": "/api/send-email.js"
+    }
+  ]
+}
