--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "nodemailer": "^6.10.0"
   }
 }
